php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #3105 Memory leak with setlocale
Submitted: 2000-01-05 02:32 UTC Modified: 2000-01-05 07:41 UTC
From: vdv at dyomedea dot com Assigned:
Status: Closed Package: Scripting Engine problem
PHP Version: 4.0 Latest CVS (05/01/2000) OS: Linux 2.0.36
Private report: No CVE-ID: None
 [2000-01-05 02:32 UTC] vdv at dyomedea dot com
<script language="php">
setlocale("LC_ALL", "fr_FR");
</script>

Gives :

string.c(2102) : Freeing 0x08242DD0 (6 bytes),
script=/home/apache/html/sites/ducotede/private/repro.php3 

Config :

./configure --with-apache=/opt/apache_1.3.9\
        --with-pgsql=/usr/local/pgsql        \
        --with-xml          


Patches

Add a Patch

Pull Requests

Add a Pull Request

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2000-01-05 07:41 UTC] jah at cvs dot php dot net
Fixed in latest CVS.
 
PHP Copyright © 2001-2024 The PHP Group
All rights reserved.
Last updated: Tue Apr 23 18:01:34 2024 UTC