(php_setlocale) Fixed memory leak (bug #3105). # Must have been thinking something else when originally wrote this.

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@18433 c90b9560-bf6c-de11-be94-00142212c4b1